--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3,21 +3,18 @@
 
 body {
   background-image: url(https://images.unsplash.com/photo-1470342495351-a5f90c5011cd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4810751019fb632656ffe28acd813135&auto=format&fit=crop&w=1950&q=80);
-  background-attachment: fixed;
+  background-attachment:scroll;
   background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   background-repeat: no-repeat;
-  background-position: top center;
-  padding-top: 200px;
-  padding-bottom: 200px;
   overflow: hidden;
   position: relative;
   width: 100%;
 }
-h1, h2 {
+h1, h2{
 color: white;
-padding: 60px;
+padding: 90px;
 margin: 0 auto;
 text-align: left;
 text-transform: uppercase;
@@ -32,33 +29,42 @@ p, ul, li {
 
 ul.header li {
   display: inline;
-  list-style-type: none;
-  margin: 0;
   color: black;
 }
 
-ul.header {
+ul.header  {
   top: 0;
-  bottom: 10;
+  bottom: 0;
   background-color: white;
-  height: 10vh;
-  width: 110vw;
+  height: 4vh;
+  width: 100vw;
   position: fixed;
   display: flex;
-  align-items: stretch;
+  justify-content: space-around;
+  text-align: center;
   min-width: 50px;
+  z-index: 2;
+  margin:0 auto;
 }
 
 ul.header li a {
-  color: black;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 20px;
-  display: inline-block;
+    text-decoration: none;
+    min-width: 30px;
+    z-index: 2;
+    font-family: 'Oswald', sans-serif;
+    font-size: 14px;
+    letter-spacing: 8px;
+    color: black;
+    font-weight: 500;
+    text-transform: uppercase;
+    opacity: .9;
+
+
 }
 
 .content {
-  background-color: black;
+  display: flex;
+  background-color: rgba(24, 24, 22, 0.8);
   padding: 20px;
   color: white;
 }
