--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -20,6 +20,32 @@ text-align: left;
 text-transform: uppercase;
 font-family: 'Oswald';
 }
+
+
+
+/*Style for menu links*/
+ li a {
+    display: flex;
+    min-width:140px;
+    height: 40px;
+    text-align: center;
+    line-height: 50px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: black;
+    background: white;
+    text-decoration: none;
+}
+
+/*Style for dropdown links*/
+li:hover ul a {
+    height: 40px;
+    line-height: 40px;
+    color: black;
+    font-weight: bold;
+    display: none;
+}
+
+
 p, ul, li {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
@@ -27,32 +53,34 @@ p, ul, li {
   line-height: 24px;
 }
 
-ul.header li {
+
+ul li {
   display: inline;
   color: black;
+
 }
 
-ul.header  {
+ul.navbar  {
   top: 0;
   bottom: 0;
   background-color: white;
   height: 4vh;
   width: 100vw;
   position: fixed;
-  display: flex;
+  display:inline-flex;
   justify-content: space-around;
   text-align: center;
   min-width: 50px;
   z-index: 2;
-  margin:0 auto;
+
 }
 
-ul.header li a {
+ul.navbar li a {
     text-decoration: none;
     min-width: 30px;
-    z-index: 2;
+    justify-content: space-around;
     font-family: 'Oswald', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 8px;
     color: black;
     font-weight: 500;
@@ -60,18 +88,74 @@ ul.header li a {
     opacity: .9;
 
 
+
 }
+
+li ul li a {
+    width: auto;
+    min-width: 100px;
+    padding: 0 20px;
+}
+
+
+/*Style 'show menu' label button and hide it by default*/
+.show-menu {
+    font-family: 'Oswald', sans-serif;
+    text-decoration: none;
+    color: white;
+    position:inherit;
+    display: none;
+}
+
+/*Hide checkbox*/
+input[type=checkbox]{
+    display: none;
+}
+
+
+/*Responsive Styles*/
+@media screen and (max-width : 460px){
+    /*Make dropdown links appear inline*/
+    ul {
+        position:fixed;
+        display: none;
+    }
+    /*Create vertical spacing*/
+    li {
+        margin-bottom: 1px;
+
+    }
+
+    /*Make all menu links full width*/
+    ul li, li a {
+        width: 100%;
+    }
+
+    /*Show menu when invisible checkbox is checked*/
+    input[type=checkbox]:checked ~ .navbar{
+        display: none;
+    }
+
+    /*Display 'show menu' link*/
+    .show-menu {
+      display:block;
+
+
+    }
+}
+
 
 .content {
   display: flex;
   background-color: rgba(24, 24, 22, 0.8);
-  padding: 20px;
+  padding: 20vh;
   color: white;
 }
 
 .content h2 {
-  padding: 0;
-  margin: 0;
+  font-size: 40px;
+  padding: 10px;
+  margin: 30px;
 }
 
 .content li {
